# pet_finder_lgbm

./: .gitignore  CMakeLists.txt  README.md
folds/: best_params_kappa.json  config_pred_holdout.txt  config_pred_infer.txt  config_train_holdout.txt  encoders.json  optuna_study.db  rf_leaf_columns.json  rf_leaf_encoder.txt  y_holdout_valid.txt
scripts/: analysis_results.py  analysis_results2.py  analyze_feature_importance.py  build_kaggle_submission.py  plot_confusion_matrix.py
src/: database.cpp  database.hpp  io_utils.cpp  io_utils.hpp  main.cpp  metrics.cpp  metrics.hpp  optuna_report.cpp  optuna_report.hpp
